--- a/styles.css
+++ b/styles.css
@@ -18,9 +18,10 @@ body {
 }
 
 .navbar-brand {
-  color: #8b32a9;
-  font-size: 31px;
+  color: #5e2b8f;
+  font-size: 29px;
   text-decoration: none;
+  margin-top: 10px;
 }
 
 .navbar-nav {
@@ -30,7 +31,7 @@ body {
 }
 
 .nav-link {
-  color: #804793;
+  color: #5e2b8f;
   text-decoration: none;
 }
 
@@ -102,7 +103,8 @@ body {
 
 .menu-item img {
   max-width: 100%;
-  height: 170px;
+  height: 210px;
+  border-radius: 6px;
 }
 
 .menu-item h3 {
@@ -124,6 +126,7 @@ body {
   max-width: 100%;
   height: 31rem;
   border-radius: 10px;
+  border: 1px solid #5e2b8f;
 }
 
 /* Contact Form */
