--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,11 @@ body {
 .container {
   display: flex;
   justify-content: space-between;
+  margin-bottom: -10px;
+}
+
+.h1p {
+  margin-bottom: -11px;
 }
 
 .navbar {
@@ -19,7 +24,7 @@ body {
 
 .navbar-brand {
   color: #5e2b8f;
-  font-size: 29px;
+  font-size: 1.25rem;
   text-decoration: none;
   margin-top: 10px;
 }
@@ -39,7 +44,7 @@ body {
   color: #fff;
 }
 
-/* Hero Section */
+
 .hero {
   background-image: url('tastyzone.jpg');
   background-size: cover;
@@ -50,6 +55,7 @@ body {
   align-items: center;
   justify-content: center;
   text-align: center;
+  color: black;
 }
 
 .hero h1 {
@@ -75,7 +81,7 @@ body {
   background-color: #3b1d53;
 }
 
-/* Section */
+
 .section {
   padding: 40px 20px;
 }
@@ -85,7 +91,6 @@ body {
   margin-bottom: 20px;
 }
 
-/* Menu Section */
 .menu-container {
   display: flex;
   justify-content: space-around;
@@ -115,7 +120,7 @@ body {
   font-weight: bold;
 }
 
-/* About Section */
+
 .about-container {
   display: flex;
   align-items: center;
@@ -129,7 +134,7 @@ body {
   border: 1px solid #5e2b8f;
 }
 
-/* Contact Form */
+
 .contact-form {
   max-width: 500px;
   margin: 0 auto;
@@ -155,7 +160,7 @@ body {
   align-self: center;
 }
 
-/* Footer */
+
 .footer {
   background-color: #2c2c2c;
   text-align: center;
